--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-.game-board {
-	width: 100px;
-	height: 100px;
-	border: 2px solid black;
+game-board {
+	width: 600px;
+	height: 600px;
+	border: 2px solid black
+}
+.boxes {
+	border: 1px solid lime;
 }
