added wireframes and coin flip function

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
-game-board {
+.game-board {
 	width: 600px;
 	height: 600px;
-	border: 2px solid black
+	border: 2px solid black;
 }
-.boxes {
-	border: 1px solid lime;
+td {
+	width: 200px;
+	height: 200px;
+	border: 2px dashed lime;
+}
+td:hover {
+	border: 2px solid red;
 }
