--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ h1 {
 }
 #mark {
 	font-size: 50px;
-
+	text-align: center;
+	vertical-align: middle;
 }
 
 .leftScore {
@@ -38,7 +39,8 @@ h1 {
 	margin-left: 20px;
 }
 
-.leftScore h3 {
+.leftScore h3,
+.leftScore p {
 	text-align: center;
 	color: #152C55;
 }
@@ -52,7 +54,8 @@ h1 {
 	margin-right: 20px;
 }
 
-.rightScore h3 {
+.rightScore h3,
+.rightScore p {
 	text-align: center;
 	color: #152C55;
 }
