functional game but messed up css

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,11 @@ h1 {
 	text-align: center;
 	color: #152C55;
 }
-
+#game-result {
+	text-align: center;
+	color: white;
+	font-size: 80px;
+}
 #reset-button {
 	width: 100px;
 	height: 50px;
