Adds show and hide feature

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,22 @@ h1 {
 	background-size: cover;
 }
 
+#doge {
+	height: 150px;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+#grumpcat {
+	height: 150px;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 .left-score {
 	position: absolute;
 	height:	300px;
@@ -56,6 +72,7 @@ h1 {
 
 .left-score h3, .left-score p {
 	text-align: center;
+	font-size: 20px;
 }
 
 .right-score {
@@ -71,23 +88,36 @@ h1 {
 
 .right-score h3, .right-score p {
 	text-align: center;
+	font-size: 20px;
+}
+
+#player-turn {
+	text-align: center;
+	color: white;
+	font-size: 20px;
 }
 
 #game-result {
 	position: absolute;
 	background-color: rgba(167, 173 ,186 , 0.4);
-	top: 25px;
 	color: white;
-	height: 300px;
+	height: 400px;
 	width: 100%;
 	text-align: center;
-	padding: 200px 0 0 0;
 	font-size: 100px;
 }
+
+#game-result button {
+	width: 200px;
+	height: 100px;
+	font-size: 25px;
+}
+
 #button-container {
 	text-align: center;
 	height: 80px;
 }
+
 button {
 	width: 100px;
 	height: 50px;
